# PythonApiSolventum

./: .gitignore  readme.md
api/: .dockerignore  Dockerfile  app.py  beworker.py  dbworker.py  pyproject.toml
api/routes/: __init__.py  stats.py  temperature.py
pipeline/: buildspec_apply.yml  buildspec_build.yml  buildspec_destroy.yml  buildspec_plan.yml
terraform_code/: main.tf  terraform.tfstate  terraform.tfstate.backup  variables.tf
terraform_code/CodePipelineRes/: main.tf  provider.tf  variable.tf
terraform_code/CodePipelineRes/cloudWatch/: output.tf  pipelineLogs.tf
terraform_code/CodePipelineRes/codeBuild/: dockerBuildProject.tf  output.tf  variable.tf
terraform_code/CodePipelineRes/codeCommit/: fetchRepo.tf  output.tf
terraform_code/CodePipelineRes/codePipeline/: appPipeline.tf  variable.tf
terraform_code/CodePipelineRes/dynamodb/: dynamodbTerraformLock.tf  output.tf
terraform_code/CodePipelineRes/ecr/: containerRepository.tf  output.tf
terraform_code/CodePipelineRes/iam/: codeBuildIam.tf  codePipelineIam.tf  output.tf  (+1 more)
terraform_code/EcsCluster/: main.tf  provider.tf  variables.tf
terraform_code/cluster/: cluster.tf  outputs.tf
terraform_code/ecsService/: apiService.tf  variables.tf
terraform_code/ecsTaskDefinition/: apiTaskDefinition.tf  provider.tf  variables.tf
terraform_code/iam/: iam.tf  outputs.tf
terraform_code/loadBalancer/: apiServiceTargetGroup.tf  apiServicelistener.tf  outputs.tf  variables.tf
terraform_code/sample/: main.tf  output.tf
terraform_code/securityGroup/: eCSSecurityGroup.tf
terraform_code/vpc/: vpc.tf
(+34 files in other folders)
