[tool.poetry]
name = "temperature stats"
version = "1.2.57"
description = ""
authors = ["lalith93kumar <lalithmax20@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12.4"
Flask = "^3.0.3"
Flask-SQLAlchemy = "^3.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
